Update GEONODE_PROJ_PROD.md